[package]
name = "grocery_list_generator"
version = "0.1.0"
authors = ["Matthew Caron <matt@mattcaron.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rand = "0.8"
structopt = "0.3"

[lints.rust]
# This codebase should never need to use any unsafe code. 
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
## NB - see clippy.toml for more granular configurations.

# Runtime unwraps are disallowed because they can panic.
unwrap_used = "deny"

# Expect is effectively unwrap with a nice error message, so it follows the
# same rationale as above as above.
expect_used = "deny"
